--- a/compile-test/crm.tests/pom.xml
+++ b/compile-test/crm.tests/pom.xml
@@ -15,7 +15,7 @@
 			<!-- the project under test -->
 			<groupId>ch.ivyteam.ivy.project.demo.ci</groupId>
 			<artifactId>crm</artifactId>
-			<version>[6.0.0-SNAPSHOT,)</version>
+			<version>6.0.0-SNAPSHOT</version>
 			<type>iar</type>
 		</dependency>
 
@@ -44,7 +44,7 @@
 			<plugin>
 				<groupId>com.axonivy.ivy.ci</groupId>
 				<artifactId>project-build-plugin</artifactId>
-				<version>6.0.3-SNAPSHOT</version>
+				<version>6.0.3</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
