--- a/compile-test/crm/pom.xml
+++ b/compile-test/crm/pom.xml
@@ -11,7 +11,7 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>6.0.3-SNAPSHOT</version>
+        <version>6.0.3</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
